tests/ui/compile-fail/pin_data/unexpected_item.rs
use pinned_init::*;

#[pin_data]
fn foo() {}

fn main() {}
