tests/ui/compile-fail/pin_data/unexpected_item.stderr
error: expected `struct`
 --> tests/ui/compile-fail/pin_data/unexpected_item.rs:4:1
  |
4 | fn foo() {}
  | ^^
